--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <main>
         <div class="banner__container">
             <h1>Make your house a home</h1>
+            <h2>UrbanHome</h2>
         </div>
         <h2>News for spring</h2>
         
